added profile photo

--- a/src/components/Welcome/welcome.scss
+++ b/src/components/Welcome/welcome.scss
@@ -14,14 +14,14 @@
     overflow: hidden;
 
     .imgContainer {
-      width: 700px;
-      height: 700px;
-      background-color: crimson;
+      width: 600px;
+      height: 600px;
+      background-color: transparent;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
       justify-content: center;
-      float: right;
+      float: left;
 
       @include mobile{
         align-items: flex-start;
