Completed about me

--- a/src/components/background/background.scss
+++ b/src/components/background/background.scss
@@ -2,5 +2,7 @@
 
 .background {
     background-color: white;
-    display: flex;
+    padding: 50px;
+    font-size: large;
+    color: '#15023a'
 }
